step 16: jotai atoms + empty controllers to get signatures
